<resources>
    <string name="app_name">FOGS2017a prototype</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="player_details">Player Details</string>
    <string name="player_name">Player Name</string>
    <string name="forename">Forename</string>
    <string name="surname">Surname</string>
    <string name="current_handicap">Current Handicap</string>
    <string name="contact_details">Contact Details</string>
    <string name="savePlayer">Save</string>
    <string name="handicap">Handicap</string>
    <string name="si">SI</string>
    <string name="par">Par</string>
    <string name="click_me">Click Me</string>
</resources>
