<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/player_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <Spinner
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:id="@+id/spnForename" />



    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="292dp"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/player_name"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/forename"
                android:ems="10"
                android:id="@+id/editForename" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/surname"
                android:ems="10"
                android:id="@+id/editSurname" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="292dp"
            android:layout_height="match_parent">

        <TextView
            android:text="@string/current_handicap"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/handicap"
                android:ems="10"
                android:id="@+id/editHandicap" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="292dp"
            android:layout_height="match_parent">
        <TextView
            android:text="@string/contact_details"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editEmail" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editPhone" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:text="@string/savePlayer"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/bthSavePlayer"
        android:allowUndo="false"
        android:hapticFeedbackEnabled="true"
        android:textColorLink="@android:color/holo_green_dark" />
</LinearLayout>